--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
     <h1>Ponemos nuestro proyecto online!</h1>
+
+    <img src="./img/imagen-dw.jpg" alt="dw">
+
     <p>Comision 42900</p>
+
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae, facere. Perferendis harum adipisci dolor eligendi vitae ducimus excepturi repudiandae ipsa officiis sequi nostrum, tempore pariatur dolores eum alias vero rem.</p>
 
 </body>
